# Rust_Visual_Editor

./: README.md  Start Rust Visual Editor.lnk
integration/: CHANGELOG.md  Cargo.toml  PUBLISHING.md  VERSIONING.md  blockly_bridge.rs  compiler_service.rs  compiler_service_main.rs  lib.rs  rust_compiler.rs
integration/examples/: simple_check.rs
web/: app.js  code_parser.js  index.html  style.css  workflows.js
web/blocks/: GAME_COMPONENTS.md  bevy-blocks.js  game-blocks.js  rust-blocks.js  wgsl-blocks.js
web/core/: .gitkeep  cross-mode-validator.js  error-handler.js  file-link-visualizer.js  mode-manager.js  multi-file-generator.js  naming-validator.js  performance-cache.js  performance-optimizer.js  reference-manager.js  rust-compiler-client.js  tabbed-code-display.js  validator.js  workspace-manager.js
web/generators/: bevy-generator.js  game-generator.js  rust-generator.js  wgsl-generator.js
web/toolbox/: .gitkeep  bevy-toolbox.js  rust-toolbox.js  toolbox-manager.js  wgsl-toolbox.js
web/utils/: .gitkeep  template-engine.js
