[package]
name = "blockly-rust-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Quadraxis77 <Quadraxis77@gmail.com>"]
description = "Rust compiler integration library for visual programming with Blockly - validate and check generated code"
license = "Apache-2.0"
repository = "https://github.com/Quadraxis77/Rust_Visual_Editor"
homepage = "https://github.com/Quadraxis77/Rust_Visual_Editor"
documentation = "https://docs.rs/blockly-rust-compiler"
readme = "../README.md"
keywords = ["blockly", "visual-programming", "rust-compiler", "code-generation"]
categories = ["development-tools", "compilers", "web-programming"]

[[bin]]
name = "rust-compiler-service"
path = "compiler_service_main.rs"
required-features = ["web-service", "cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Optional dependencies for web service
axum = { version = "0.6", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
web-service = ["axum", "tokio"]
cli = ["clap", "tokio"]
full = ["web-service", "cli"]

[lib]
name = "blockly_rust_compiler"
path = "lib.rs"
